# gitignore-builder

./: README.md  pyproject.toml  task.yml
.github/workflows/: test.yml
gitignore_builder/: main.py
tests/: test_main.py
